@@ -1,3 +1,6 @@
+2020-02-23  Franz Holzinger  <franz@ttproducts.de>
+    * bugfix for TYPO3 9.5: Wrong class name Typo3DbLegacyDatabaseConnection. Use Typo3DbLegacyConnection instead.
+
 2020-02-20  Franz Holzinger  <franz@ttproducts.de>
     * bugfix for TYPO3 8.7: The old style TYPO3_DB based functions did not get debugged.
 
